Fix errors in new "noWrap" metadata. Make LinkButton accept IUIAction.

--- a/to.etc.domui/src/resources/themes/blue/style.theme.css
+++ b/to.etc.domui/src/resources/themes/blue/style.theme.css
@@ -1079,19 +1079,8 @@ tbody td.ui-dt-separator {
 	padding: 2px 4px 2px 4px;
 	font-weight: bold;
 	background: url(bg-header.png.svg) repeat-x;
-	margin-top: 10px;
+/*	margin-top: 10px; jal 20120213 removed: header should not define it's upper location, because it cannot be used at the top of a screen! */
 }
-
-
-/*** Caption ***/
-.ui-cptn {
-	border: 1px solid #bed6f8;
-	padding: 2px 4px 2px 4px;
-	font-weight: bold;
-	background: url(bg-header.png.svg) repeat-x;
-	margin-top: 10px;
-}
-
 
 /*** CaptionedPanel ***/
 .ui-pnl-outer {
